# menu-printer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  data_structs.hpp  debug.cpp  main.cpp  main.hpp  parse_settings.hpp  settings.json
